syntax = "proto3";

message SubscribeObject {
    string source = 1;
    int32 ty = 2;
    string id = 3;
    oneof one_of_payload { bytes payload = 4; };
    oneof one_of_error { bytes error = 5; };
}
