syntax = "proto3";

message UserToken {
    string token = 1;
}
message UserProfile {
    string id = 1;
    string email = 2;
    string name = 3;
    string token = 4;
}
message UpdateUserPayload {
    string id = 1;
    oneof one_of_name { string name = 2; };
    oneof one_of_email { string email = 3; };
    oneof one_of_password { string password = 4; };
}
message UpdateUserParams {
    string id = 1;
    oneof one_of_name { string name = 2; };
    oneof one_of_email { string email = 3; };
    oneof one_of_password { string password = 4; };
}
